syntax = "proto3";
option go_package = "github.com/dhcmrlchtdj/raftoy/rpc";

package rpc;

///

service RaftRpc {
    // basic
    rpc AppendEntries(ReqAppendEntries) returns (RespAppendEntries) {
    }
    rpc RequestVote(ReqRequestVote) returns (RespRequestVote) {
    }

    // extend
    rpc PreVote(ReqPreVote) returns (RespPreVote) {
    }
    rpc TimeoutNow(ReqTimeoutNow) returns (RespTimeoutNow) {
    }

    // membership
    rpc AddServer(ReqAddServer) returns (RespServer) {
    }
    rpc RemoveServer(ReqRemoveServer) returns (RespServer) {
    }

    // client
    rpc RegisterClient(ReqRegisterClient) returns (RespClient) {
    }
    rpc ClientRequest(ReqClientRequest) returns (RespClient) {
    }
    rpc ClientQuery(ReqClientQuery) returns (RespClient) {
    }
}

///

message ReqAppendEntries {
    uint64 term = 1;
    string leaderId = 2;
    uint64 prevLogIndex = 3;
    uint64 prevLogTerm = 4;
    uint64 leaderCommit = 5;
    repeated Entry entries = 6;
}
message Entry {
    uint64 term = 1;
    uint64 index = 2;
    string command = 3;
}
message RespAppendEntries {
    uint64 term = 1;
    bool success = 2;
}

///

message ReqRequestVote {
    uint64 term = 1;
    string candidateId = 2;
    uint64 lastLogIndex = 3;
    uint64 lastLogTerm = 4;
}
message RespRequestVote {
    uint64 term = 1;
    bool voteGranted = 2;
}

///

message ReqPreVote {
    uint64 preVoteTerm = 1;
    string CandidateId = 2;
    uint64 lastLogIndex = 3;
    uint64 lastLogTerm = 4;
}
message RespPreVote {
    uint64 term = 1;
    bool success = 2;
}

///

message ReqTimeoutNow {
    // TODO
}
message RespTimeoutNow {
    // TODO
}

///

message ReqAddServer {
    string newServer = 1;
}

message ReqRemoveServer {
    string oldServer = 1;
}

message RespServer {
    enum Status {
        OK = 0;
        TIMEOUT = 1;
    }
    Status status = 1;
    optional string leaderHint = 2;
}

///

message ReqRegisterClient {
}

message ReqClientRequest {
    string clientId = 1;
    uint64 sequenceNum = 2;
    string command = 3;
}

message ReqClientQuery {
    string query = 1;
}

message RespClient {
    enum Status {
        OK = 0;
        NOT_LEADER = 1;
        SESSION_EXPIRED = 2;
    }
    Status status = 1;
    string response = 2;
    string leaderHint = 3;
}
